; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/mmc/extr_console.c_FrameOnSave.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/mmc/extr_console.c_FrameOnSave.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @FrameOnSave to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @FrameOnSave(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  %5 = call i32* (...) @GetActiveChildInfo()
  store i32* %5, i32** %4, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %8, label %10

8:                                                ; preds = %1
  %9 = load i32, i32* @FALSE, align 4
  store i32 %9, i32* %2, align 4
  br label %14

10:                                               ; preds = %1
  %11 = load i32, i32* %3, align 4
  %12 = load i32*, i32** %4, align 8
  %13 = call i32 @DoSaveFile(i32 %11, i32* %12)
  store i32 %13, i32* %2, align 4
  br label %14

14:                                               ; preds = %10, %8
  %15 = load i32, i32* %2, align 4
  ret i32 %15
}

declare dso_local i32* @GetActiveChildInfo(...) #1

declare dso_local i32 @DoSaveFile(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
